--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
   height: 50px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; 
   font-size: larger;
 }
 
@@ -17,10 +17,10 @@ body{
   width: 100vw;
   height: 10vh;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   font-family: monospace;
-  justify-content: space-evenly;
+  justify-content: center;
 }
 
 .marker {
